--- a/kl_core/src/main/resources/application.properties
+++ b/kl_core/src/main/resources/application.properties
@@ -5,11 +5,12 @@ server.port=8082
 
 databases=e_ktt_dev,postgres
 # configuration for oracle:e_ktt_dev
+e_ktt_dev.createPool=true
 e_ktt_dev.jdbcUrl=jdbc:oracle:thin:@10.0.222.125:1521:kttdb
 e_ktt_dev.username=e_ktt_dev
 e_ktt_dev.password=Oracle123
 e_ktt_dev.driverClassName=oracle.jdbc.OracleDriver
-e_ktt_dev.maximumPoolSize=100
+e_ktt_dev.maximumPoolSize=10
 e_ktt_dev.minimumIdle= 10
 # second
 e_ktt_dev.connectionTimeout=30
@@ -25,11 +26,12 @@ e_ktt_dev.prepStmtCacheSqlLimit=2048
 
 
 # configuration for postgres:postgres
+tvandb_test.createPool=false
 tvandb_test.jdbcUrl=jdbc:postgresql://10.0.222.28:5432/postgres
 tvandb_test.username=postgres
 tvandb_test.password=Postgres123
 tvandb_test.driverClassName=org.postgresql.Driver
-tvandb_test.maximumPoolSize=100
+tvandb_test.maximumPoolSize=10
 tvandb_test.minimumIdle= 10
 # second
 tvandb_test.connectionTimeout=30
