--- a/kl_core/src/main/resources/application.properties
+++ b/kl_core/src/main/resources/application.properties
@@ -3,8 +3,9 @@ server.port=8082
 # to get how many databases we have and automatically pick the appropriate credentials
 # after adding new database add it in teh end separated by comma\
 
-databases=e_ktt_dev,postgres
+
 # configuration for oracle:e_ktt_dev
+#e_ktt_dev.dbKey=e_ktt_dev
 e_ktt_dev.createPool=true
 e_ktt_dev.jdbcUrl=jdbc:oracle:thin:@10.0.222.125:1521:kttdb
 e_ktt_dev.username=e_ktt_dev
@@ -26,6 +27,7 @@ e_ktt_dev.prepStmtCacheSqlLimit=2048
 
 
 # configuration for postgres:postgres
+#tvandb_test.dbKey=e_ktt_dev
 tvandb_test.createPool=false
 tvandb_test.jdbcUrl=jdbc:postgresql://10.0.222.28:5432/postgres
 tvandb_test.username=postgres
